@@ -1,5 +1,13 @@
 2007-11-29  Marius Vollmer  <marius.vollmer@nokia.com>
 
+	* src/repo.cc (cat_has_errors, cat_compare): New.
+	(set_cat_list): Use them to sort the catalogues befopre
+	displaying.
+
+	* src/apt-worker-bin.cc (save_failed_catalogues): Do not sort
+	catalogues here, it is now done when displaying them.
+	(compare_failed_catalogues): Removed.
+
 	* src/repo.cc (cat_text_func): Use "ai_ia_failed_catalogue"
 	instead of "ai_ti_failed_catalogue".
 
